[package]
name = "vouch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
directories = "6.0.0"
fs3 = "0.5.0"
instant-acme = "0.8.5"
serde_json = "1.0.149"
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
