[package]
name = "vouch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.5.60", features = ["derive", "env"] }
directories = "6.0.0"
fs3 = "0.5.0"
hex = "0.4.3"
instant-acme = { version = "0.8.5", features = ["time", "x509-parser"] }
rustls-pki-types = "1"
serde_json = "1.0.149"
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
x509-parser = "0.18.1"
rcgen = { version = "0.13", features = ["pem", "aws_lc_rs"] }
time = "0.3.47"

[dev-dependencies]
